--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
             <div class="container">
-                <a href="{% url 'customer-signup' %}" class="register">Register Today!</a>
+                
             
             <a href="{% url 'customer-login' %}" class="login">LOGIN</a></div>
         </nav>
@@ -62,6 +62,9 @@
                     <li>Secure and Confidential Handling</li>
                     <li>Easy-to-Use Dashboard</li>
                 </ul>
+            </div>
+            <div class="container">
+                <a href="{% url 'customer-signup' %}" class="register" style="padding: 20px 30px; display: inline-block; margin-top: 20px;">Register Today!</a>
             </div>
         </section>
     </main>
