--- a/static/styles.css
+++ b/static/styles.css
@@ -142,11 +142,11 @@ nav ul li a {
   padding: 30px 0px;
 }
 .register {
+  padding: 30px 70px;
   background: #00415a;
   color: white;
   text-decoration: none;
   font-weight: bold;
-  border-radius: 5px;
 }
 
 
