--- a/templates/home.html
+++ b/templates/home.html
@@ -81,8 +81,8 @@
             <div class="footer-section">
                 <h3>Follow Us</h3>
                 <ul class="social-links">
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#"> <img src="{% static 'img/facebook-logo.png' %}" alt="Facebook Logo" style = "height: 50px"></a></li>
+                    <li><a href="#"> <img src="{% static 'img/twitter-logo.png' %}" alt="Twitter Selar Login" style = "height: 50px"></a></li>
                     <li><a href="#">LinkedIn</a></li>
                 </ul>
             </div>
